--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,8 @@
 
     <!-- <script src="https://polyfill.io/v3/polyfill.min.js?features=default"></script> -->
 
+    <script type="text/javascript" src="https://assets.calendly.com/assets/external/widget.js" async></script>
+    
   </head>
   <body>
 
